added models to index file

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
     "mysql2": "^3.9.2",
+    "passport": "^0.7.0",
+    "passport-google-oidc": "^0.1.0",
     "sequelize": "^6.37.1"
   }
 }
