working on tasks

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bulma": "^1.0.0",
     "connect-session-sequelize": "^7.1.7",
     "connect-sqlite3": "^0.9.15",
     "dotenv": "^16.4.5",
@@ -19,6 +20,7 @@
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
     "mysql2": "^3.9.2",
+    "nodemon": "^3.1.0",
     "passport": "^0.7.0",
     "passport-google-oidc": "^0.1.0",
     "sequelize": "^6.37.1"
