--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mysql2": "^3.9.2",
     "passport": "^0.7.0",
     "passport-google-oidc": "^0.1.0",
+    "sass": "^1.72.0",
     "sequelize": "^6.37.1"
   }
 }
