--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
+    "express-sessions": "^1.0.6",
     "handlebars": "^4.7.8",
     "mysql2": "^3.9.2",
     "nodemon": "^3.1.0",
