--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mysql2": "^3.9.2",
     "nodemon": "^3.1.0",
     "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "passport-google-oidc": "^0.1.0",
     "sass": "^1.72.0",
     "sequelize": "^6.37.1"
