--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
     "express-session": "^1.18.0",
+    "jquery": "^3.7.1",
     "mysql2": "^3.9.2",
     "nodemon": "^3.1.0",
     "passport": "^0.7.0",
